--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
   "domain": "auckland_bin_collection",
   "iot_class": "cloud_polling",
   "name": "Auckland Bin Collection",
-  "requirements": [],
+  "requirements": ["beautifulsoup4==4.12.0"],
   "version": "0.0.1"
 }
