--- a/requirements.test.txt
+++ b/requirements.test.txt
@@ -1,3 +1,6 @@
 beautifulsoup4==4.12.0
 freezegun==1.2.2
-pytest-homeassistant-custom-component
+pytest==7.2.1
+pytest-cov==3.0.0
+pytest-asyncio==0.20.2
+pytest-homeassistant-custom-component==0.12.55
